--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/app.js",
     "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
+    "pretest": "cross-env NODE_ENV=test MONGO_CONNECTION_STRING=mongodb://localhost:27017/nexus_test",
+    "test": "node --no-warnings --experimental-vm-modules ./node_modules/.bin/jest --testTimeout=5000",
     "lint:check": "eslint .",
     "lint:fix": "eslint --fix .",
     "format:check": "prettier --check .",
@@ -14,14 +16,19 @@
   "contributors": [],
   "keywords": [],
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "mongoose": "^8.2.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "supertest": "^6.3.4"
   }
 }
