--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "supertest": "^6.3.4"
