--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "path": "^0.12.7",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
