--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "pretest": "cross-env NODE_ENV=test MONGO_CONNECTION_STRING=mongodb://localhost:27017/nexus_test",
-    "test": "node --no-warnings --experimental-vm-modules ./node_modules/.bin/jest --testTimeout=5000",
     "lint:check": "eslint .",
     "lint:fix": "eslint --fix .",
     "format:check": "prettier --check .",
@@ -27,13 +25,10 @@
     "url": "^0.11.3"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "jest": "^29.7.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
-    "prettier": "^3.2.5",
-    "supertest": "^6.3.4"
+    "prettier": "^3.2.5"
   }
 }
