--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
   "extends": ["eslint:recommended", "prettier"],
   "env": {
     "es2023": true,
-    "node": true
+    "node": true,
+    "browser": true
   }
 }
