--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,5 +8,8 @@
   "bracketSpacing": true,
   "bracketSameLine": true,
   "arrowParens": "always",
-  "overrides": [{ "files": "main.handlebars", "options": { "parser": "html" } }]
+  "overrides": [
+    { "files": "main.handlebars", "options": { "parser": "html" } }
+  ],
+  "plugins": ["prettier-plugin-css-order"]
 }
