--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslint-config-prettier": "^9.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
-    "prettier": "^3.2.5"
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "prettier-plugin-css-order": "^2.1.2"
   }
 }
