--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.2.0",
     "path": "^0.12.7",
+    "socket.io": "^4.7.5",
     "url": "^0.11.3"
   },
   "devDependencies": {
